--- a/css/style.css
+++ b/css/style.css
@@ -425,3 +425,16 @@ td,
 th {
 	padding: 0;
 }
+
+/* Custom Styling
+	========================================================================== */
+html
+{
+	background-color: #000000;
+}
+
+img
+{
+	width: 48px;
+	height: 48px;
+}
