--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/*Font Import */
+@import url(http://fonts.googleapis.com/css?family=Lobster+Two:700);
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 
 /**
@@ -430,11 +432,88 @@ th {
 	========================================================================== */
 html
 {
-	background-color: #000000;
+	width: 100%;
+	height: 100%;
+	background: #171313;
 }
 
-img
+header
 {
-	width: 48px;
-	height: 48px;
+	width: 100%;
+	height: 80px;
+}
+
+nav
+{
+	width: 100%;
+	height: 40px;
+	background: #212323;
+	text-align: center;
+	z-index: 10;
+	margin: 0;
+	padding: 0;
+}
+
+.primary-nav
+{
+	display: inline-block;
+	height: 40px;
+	background: transparent;
+	margin: 0 auto;
+}
+
+.primary-nav ul
+{
+	position: relative;
+	display: inline-block;
+	height: 40px;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.primary-nav .nav-link
+{
+	display: inline;
+	background-color: #009688;
+	padding: 0 20px;
+	float: left;
+	height: 40px;
+	line-height: 40px;
+	font-family: 'PT Sans Narrow',sans-serif;
+	color: #D0CDCD;
+	cursor: pointer;
+	-webkit-transition-duration: 300ms;
+	-moz-transition-duration: 300ms;
+	-ms-transition-duration: 300ms;
+	-o-transition-duration: 300ms;
+	transition-duration: 300ms;
+}
+
+.primary-nav .nav-link:hover
+{
+	color: #eee;
+	line-height: 35px;
+}
+
+.text-logo
+{
+	display: border-box;
+	font-family: 'Lobster Two',cursive;
+	font-size: 2.4em;
+	color: #079A8C;
+	height: 80px;
+	line-height: 80px;
+	padding: 0 20px;
+}
+
+/* Transitions
+==============================================*/
+.transition
+{
+	-webkit-transition : all 0.5s ease-in-out;
+	-moz-transition    : all 0.5s ease-in-out;
+	-ms-transition     : all 0.5s ease-in-out;
+	-o-transition      : all 0.5s ease-in-out;
+	transition         : all 0.5s ease-in-out;
 }
