--- a/css/style.css
+++ b/css/style.css
@@ -430,10 +430,11 @@ th {
 
 /* Custom Styling
 	========================================================================== */
-html
+html,body
 {
 	width: 100%;
 	height: 100%;
+	margin: 0;
 	background: #171313;
 }
 
@@ -512,3 +513,18 @@ nav
 	-o-transition      : all 0.5s ease-in-out;
 	transition         : all 0.5s ease-in-out;
 }
+
+/* Media Queries
+=============================================*/
+@media screen and (max-width: 720px) {
+	.primary-nav .nav-link{
+		padding: 0 10px;
+	}
+}
+
+@media screen and (max-width: 640px){
+	.nav-link:not(#nav-logo){
+		display: none;
+	}
+}
+
