Add know more link

--- a/css/style.css
+++ b/css/style.css
@@ -535,6 +535,7 @@ div.intro
 	color: white;
 	font-size: 3em;
 	font-family: 'Amaranth',sans-serif;
+	padding-bottom: 20px;
 }
 
 span.name
@@ -563,6 +564,32 @@ span.skill-set
 span.skill-set:hover
 {
 	border-bottom: 1px dotted #009688;
+}
+
+div.know-more
+{
+	color: #3C3838;
+	font-size: 4em;
+	font-family: 'League Gothic',sans-serif;
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	padding-bottom: 10px;
+	text-align: center;
+	cursor: pointer;
+}
+
+div.know-more:after
+{
+	content: "Know More";
+	display: block;
+	clear: both;
+	font-size: 0.2em;
+}
+
+div.know-more:hover
+{
+	color: #009688;
 }
 /* Transitions
 ==============================================*/
