--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,17 @@ html,body
 	background: #171313;
 }
 
+body
+{
+	overflow: hidden;
+}
+
+a,a:visited
+{
+	color: inherit;
+	text-decoration: none;
+}
+
 header
 {
 	width: 100%;
@@ -590,6 +601,47 @@ div.know-more:after
 div.know-more:hover
 {
 	color: #009688;
+}
+
+div#about-container
+{
+	background-color: #0E1717;
+}
+
+.inner-container
+{
+	background-color: #142020;
+	width: 60%;
+	height: 70%;
+	margin: 100px auto 0 auto;
+}
+
+#author
+{
+	padding-top: 20px;
+	margin: 10px auto 0 auto;
+	text-align: center;
+}
+
+#author img
+{
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+}
+
+#author span
+{
+	display: block;
+	clear: both;
+	border-bottom: 0;
+}
+
+#author-bio
+{
+	padding: 10px;
+	width: 90%;
+	margin: 10px auto;
 }
 /* Transitions
 ==============================================*/
